fixed overlaps

--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -47,9 +47,9 @@
     }
     .about-me_description{
         text-align: center;
-        font-size: 4.5vw;
+        font-size: 4.2vw;
         width: 100%;
-        /* height: 20vh; */
+        height: 20vh;
         margin-bottom: 50vh;
     }
     .about-me h1{
