--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -137,7 +137,7 @@ button:hover{
         width: 30vw;
         height: 5vh;
         font-size: 5vw;
-        margin-bottom: -10vh;
+        margin-bottom: -5vh;
         /* background-color: green; */
     }
     .column {
