--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -121,6 +121,7 @@
         margin-bottom: 0;
     }
     #my-title h1{
+        color: rgba(0, 0, 0, 0.75);
         margin-bottom: -40px;
     }
     #icon-home{
